# Apostrophe

./: .gitignore  .gitlab-ci.yml  .quickly  AUTHORS  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  Ideas.md  MANIFEST.in  Makefile  NEWS  PKGBUILD  README.md  apostrophe.doap  apostrophe.in  changes.patch  config.py.in  de.wolfvollprecht.UberWriter.desktop  de.wolfvollprecht.UberWriter.uberwriter.desktop  index.html  lipsum.md  meson.build  meson_options.txt  requirements.txt  setup.py  uberwriter.desktop.in  uberwriter.in
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apostrophe/: .pylintrc  __init__.py  application.py  auto_correct.py  builder.py  config.py  export_dialog.py  fix_table.py  headerbars.py  helpers.py  inhibitor.py  inline_preview.py  insecure_file_warning.py  latex_to_PNG.py  main_window.py  markup_regex.py  open_popover.py  preferences_dialog.py  preview_converter.py  preview_handler.py  preview_layout_switcher.py  preview_renderer.py  preview_web_view.py  preview_window.py  search_and_replace.py  settings.py  sidebar.py  stats_counter.py  stats_handler.py  styled_window.py  tables.py  text_buffer.py  text_view.py  text_view_drag_drop_handler.py  text_view_format_inserter.py  text_view_markup_handler.py  text_view_scroller.py  text_view_undo_redo_handler.py  theme.py  theme_switcher.py  (+1 more)
build-aux/: meson_post_config.py  meson_post_install.py
data/: apostrophe.gresource.xml  de.wolfvollprecht.UberWriter.appdata.xml  de.wolfvollprecht.UberWriter.appdata.xml.in.in  de.wolfvollprecht.UberWriter.desktop.in.in  de.wolfvollprecht.UberWriter.gschema.xml  meson.build  org.example.myapp.gschema.xml  org.gnome.gitlab.somas.Apostrophe.appdata.xml.in.in  org.gnome.gitlab.somas.Apostrophe.desktop.in.in  org.gnome.gitlab.somas.Apostrophe.gschema.xml  org.gnome.gitlab.somas.Apostrophe.metainfo.xml.in  org.gnome.gitlab.somas.Apostrophe.metainfo.xml.in.in  org.gnome.gitlab.somas.Apostrophe.metainfo.xml.translate  org.gnome.wolf.Apostrophe.appdata.xml.in.in  org.gnome.wolf.Apostrophe.gschema.xml  uberwriter.gresource.xml
data/glib-2.0/schemas/: gschemas.compiled  net.launchpad.uberwriter.gschema.xml
data/icons/: de.wolfvollprecht.apostrophe.Source  de.wolfvollprecht.uberwriter.Source  meson.build
data/lua/: relative_to_absolute.lua
data/media/: adwaita_style.css  apostrophe_markdown.md  arc_style.css  formats.json  github-md-dark.css  github-md.css  scrollToMark.htmlsnippet  style.css  style_dark.css  style_dark_old.css  uberwriter.css  uberwriter_dark.css  uberwriter_markdown.md
data/media/css/: _gtk_base.css  _web_base.css  gtk_adwaita.css  gtk_adwaita_dark.css  gtk_arc.css  gtk_arc_dark.css  gtk_arc_darker.css  gtk_base.css  gtk_high_contrast.css  gtk_high_contrast_inverse.css  web_adwaita.css  web_adwaita_dark.css  web_arc.css  web_arc_dark.css  web_arc_darker.css  web_high_contrast.css  web_high_contrast_inverse.css  web_highcontrast.css  web_highcontrast_inverse.css
data/media/css/gtk/: Adwaita-dark-hc.scss  Adwaita-dark.scss  Adwaita-hc.scss  Adwaita-sepia-hc.scss  Adwaita-sepia.scss  Adwaita.scss  _base.scss  _definitions.scss  _drawing.scss  _recoloring.scss  base.css  base.scss  bindings.css  meson.build  style-dark.css  style-sepia.css  style.css
data/media/css/web/: adwaita-sepia.css  adwaita.css  adwaita_dark.css  arc.css  arc_dark.css  arc_darker.css  base.css  highcontrast.css  highcontrast_inverse.css
data/media/formular_editor/: index.html
data/media/table_editor/: index.html
data/reference_files/: reference-a4.docx  reference-a4.odt
data/ui/: About.ui  About.ui.in  AboutHemingway.ui  AboutUberwriterDialog.ui  App_menu.ui  Export.ui  ExportPopover.ui  Headerbar.ui  InsecureFileWarning.ui  Menu.ui  Menu2.ui  Menu4.ui  Preferences.ui  Preview.ui  PreviewLayoutSwitcher.ui  PreviewLayoutSwitcherItem.ui  PreviewWindow.ui  Recents.ui  SearchBar.ui  SettingsMenu.ui  Shortcuts.ui  TexliveWarning.ui  TextView.ui  ThemeSwitcher.ui  UberwriterAdvancedExportDialog.ui  UberwriterWindow.ui  Window.ui  WindowMenu.ui  WindowMenubck.xml  about_uberwriter_dialog.xml  uberwriter_advanced_export_dialog.xml  uberwriter_window.xml
debian/: changelog  control  copyright  files  rules  uberwriter.postinst.debhelper  uberwriter.prerm.debhelper  uberwriter.substvars
flatpak/: GnomeWebPhoto.patch  ORBit2.patch  de.wolfvollprecht.UberWriter.appdata.xml  flatpak_gnome_web_photo.json  flatpak_texlive.json  flatpak_texlive_flathub.json  pandoc-download  texlive_install.sh  uberwriter.json
help/: meson.build
images/: file_type_icons_flat.psd
po/: LINGUAS  POTFILES.in  apostrophe.pot  ca.po  ca_ES.po  compile_translations.sh  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ka.po  meson.build  ne.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sl.po  sr.po  sv.po  th.po  tr.po  uberwriter-ca.po  uberwriter-de.po  uberwriter-en_GB.po  (+15 more)
scripts/: color_palette_generator.py  data_generator.sh  metainfo_generator.sh
subprojects/: libsass.wrap  sassc.wrap
tests/: markdown_test.md  test_example.py  test_lint.py  test_regex.py  test_regex_commonmark.py
uberwriter/: AboutUberwriterDialog.py  AppWindow.py  Builder.py  FixTable.py  FormatShortcuts.py  MarkupBuffer.py  Settings.py  Theme.py  UberwriterAdvancedExportDialog.py  UberwriterAutoCorrect.py  UberwriterExportDialog.py  UberwriterInlinePreview.py  UberwriterSearchAndReplace.py  UberwriterSidebar.py  UberwriterTextEditor.py  UberwriterWindow.py  __init__.py  application.py  auto_correct.py  builder.py  config.py  export_dialog.py  fix_table.py  format_shortcuts.py  headerbars.py  helpers.py  inline_preview.py  latex_to_PNG.py  main_window.py  markup_buffer.py  markup_regex.py  preferences_dialog.py  preview_converter.py  preview_handler.py  preview_renderer.py  preview_web_view.py  previewer.py  scroller.py  search_and_replace.py  settings.py  (+16 more)
uberwriter_lib/: .pylintrc  AdvancedExportDialog.py  AppWindow.py  Builder.py  LatexToPNG.py  PreferencesDialog.py  Window.py  __init__.py  helpers.py  tables.py  uberwriterconfig.py
(+151 files in other folders)
