install_data(
	'de.wolfvollprecht.UberWriter.svg',
	install_dir: datadir / 'icons' / 'hicolor' / 'scalable' / 'apps',
	rename: '@0@.svg'.format(application_id)
)

install_data(
	'de.wolfvollprecht.UberWriter-symbolic.svg',
	install_dir: datadir / 'icons' / 'hicolor' / 'symbolic' / 'apps',
	rename: '@0@-symbolic.svg'.format(application_id)
)
